examples/effects/failing/03_reserved_internal_primop.flx
// Internal primop names are implementation details for synthesized handlers.

fn main() {
    __primop_println("not user-callable")
}
